make change in event app

--- a/event/templates/event/home.html
+++ b/event/templates/event/home.html
@@ -18,7 +18,7 @@
     {% for events in eventlist %}
     <tr>
       <th scope="row"><a href="event_details/{{events.id}}">{{events.id}}</a></th>
-      <td>{{events.title}}</td>
+      <td>{{events.title}}</a></td>
       <td>{{events.pricemoney}}</td>
       <td>{{events.StartingDate|date:"F d,Y"}}</td>
       <td>{{events.numberofseats}}</td>
