--- a/event/templates/event/userdetail.html
+++ b/event/templates/event/userdetail.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <article class="media content-section">
         <div class="media-body">
-            <div class="article-metadata">
+            <!-- <div class="article-metadata">
                 <b>Id :{{obj.id}}</b>
                 <small style="float: right;">PostBy : <a
                         href="/user_Details/{{obj.postby.username}}">{{obj.postby.username}}</a></small>
@@ -21,7 +21,8 @@
             Event Starting Date:<p class="article-content">{{ obj.StartingDate|date:"F d,Y" }}</p>
             Event Ending Date:<p class="article-content">{{ obj.Endingdate|date:"F d,Y" }}</p>
             Category:<p class="article-content">{{ obj.Category }}</p>
-            Number of Seats<p class="article-content">{{ obj.numberofseats }}</p>
+            Number of Seats<p class="article-content">{{ obj.numberofseats }}</p> -->
+            User details of : {{obj.username}}
         </div>
     </article>
 </div>
