Update in Event model

--- a/event/templates/event/event_add.html
+++ b/event/templates/event/event_add.html
@@ -10,9 +10,9 @@
     description :<input type="text" name="description" placeholder="Description" required><br />
     venue :<input type="text" name="venue" placeholder="venue" required><br />
     Category :<input type="text" name="Category" placeholder="Category" required><br />
-    Starting date :<input type="date" name="starting_date" placeholder="starting date" required><br />
-    Ending date<input type="date" name="ending_date" placeholder="starting date" required><br />
-    Eventtime :<input type="time" name="duration" required><br />
+    Starting date :<input type="datetime-local" name="starting_date" placeholder="starting date" required><br />
+    Ending date<input type="datetime-local" name="ending_date" placeholder="starting date" required><br />
+    Duration :<input type="time" name="duration" required><br />
     joiningfees :<input type="number" name="fee" required><br />
     pricemoney :<input type="number" name="price" required><br />
     Number of members per team :<input type="number" name="numberofparticipants" placeholder="number of participants"
