--- a/event/templates/event/event_details.html
+++ b/event/templates/event/event_details.html
@@ -16,7 +16,7 @@
             pricemoney:<p class="article-content">{{ obj.pricemoney }}</p>
             Members: <p class="article-content">{{ obj.members }}</p>
             link:<a class="article-content" href="{{ obj.link }}">{{ obj.link }}</a><br /><br />
-            Eventtime: <p class="article-content">{{ obj.Eventtime }}</p>
+            Duration: <p class="article-content">{{ obj.Eventtime }}</p>
             venue:<p class="article-content">{{ obj.venue }}</p>
             Event Starting Date:<p class="article-content">{{ obj.StartingDate|date:"F d,Y" }}</p>
             Event Ending Date:<p class="article-content">{{ obj.Endingdate|date:"F d,Y" }}</p>
