--- a/event/templates/event/event_update.html
+++ b/event/templates/event/event_update.html
@@ -5,20 +5,20 @@
 <br />
 <form action="/event_view/{{obj.id}}/updated" method="POST">
     {%csrf_token%}
-    organizer:<input type="text" name="organizer" placeholder="User namae of Organizer" value="{{obj.organizer}}"
+    Organizer:<input type="text" name="organizer" placeholder="User namae of Organizer" value="{{obj.organizer}}"
         required><br />
-    title :<input type="text" name="event_title" placeholder="Title" value="{{obj.title}}" required><br />
-    description :<input type="text" name="description" placeholder="Description" value="{{obj.description}}"
+    Title :<input type="text" name="event_title" placeholder="Title" value="{{obj.title}}" required><br />
+    Description :<input type="text" name="description" placeholder="Description" value="{{obj.description}}"
         required><br />
-    venue :<input type="text" name="venue" placeholder="venue" value="{{obj.venue}}" required><br />
+    Venue :<input type="text" name="venue" placeholder="venue" value="{{obj.venue}}" required><br />
     Category :<input type="text" name="Category" placeholder="Category" value="{{obj.Category}}" required><br />
-    Starting date :<input type="date" id="startingdate" name="starting_date" placeholder="starting date"
+    Starting date :<input type="datetime-local" id="startingdate" name="starting_date" placeholder="starting date"
         value="{{obj.StartingDate}}" required><br />
-    Ending date<input type="date" id="endingdate" name="ending_date" placeholder="starting date"
+    Ending date<input type="datetime-local" id="endingdate" name="ending_date" placeholder="starting date"
         value="{{obj.Endingdate}}" required><br />
-    Eventtime :<input type="time" name="duration" value="{{obj.Eventtime}}" required><br />
-    joiningfees :<input type="number" name="fee" value="{{obj.joiningfees}}" required><br />
-    pricemoney :<input type="number" name="price" value="{{obj.pricemoney}}" required><br />
+    Duration :<input type="time" name="duration" value="{{obj.Eventtime}}" required><br />
+    Joiningfees :<input type="number" name="fee" value="{{obj.joiningfees}}" required><br />
+    Price-money :<input type="number" name="price" value="{{obj.pricemoney}}" required><br />
     Number of members per team :<input type="number" name="numberofparticipants" placeholder="number of participants"
         value="{{obj.members}}" required><br />
     Registration link :<input type="url" name="link" placeholder="Add Link" value="{{obj.link}}" required><br />
