--- a/event/templates/event/my_event_requested.html
+++ b/event/templates/event/my_event_requested.html
@@ -1,7 +1,4 @@
-{% extends "event/base.html" %}
-{% block content %}
-<a href="/my_event">My Events</a>
-<h1 style="text-align: center;">List of all the Events Requested by me</h1>
+<h1 style="text-align: center;">List of all the Events Requested</h1>
 <br />
 <br />
 <table class="table table-hover">
@@ -27,5 +24,3 @@
 
     </tbody>
 </table>
-
-{% endblock content %}
