--- a/event/templates/event/event_details.html
+++ b/event/templates/event/event_details.html
@@ -228,8 +228,8 @@
                     <div class="about-text go-to">
 
                         <h3 class="dark-color">{{ obj.title}}</h3>
-                        <p><small>PostBy : <a href="/user_Details/{{obj.postby.username}}"
-                                    target="_blank">{{obj.postby.username}}</a></small></p>
+                        <p><small>PostBy :
+                                <a href="/user_Details/{{obj.postby.username}}">{{obj.postby.username}}</a></small></p>
 
                         <p>{{ obj.description }}</p>
 
