--- a/event/templates/event/base.html
+++ b/event/templates/event/base.html
@@ -35,6 +35,9 @@
 
 
             <a class="nav-item nav-link" href="{% url 'event-home' %}">Home</a>
+            {%ifequal user.profile.usertype "Organizer" %}
+            <a class="nav-item nav-link" href="/event_view/add" target="_blank">ADD Event</a>
+            {%endifequal%}
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
             {% endif %}
