--- a/event/templates/event/userdetail.html
+++ b/event/templates/event/userdetail.html
@@ -1,250 +1,146 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>Document</title>
-    <style>
-        body {
-            color: #6F8BA4;
-            margin-top: 20px;
-        }
 
-        .section {
-            padding: 100px 0;
-            position: relative;
-        }
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        .gray-bg {
-            background-color: #f5f5f5;
-        }
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'event/main.css' %}">
 
-        img {
-            max-width: 100%;
-        }
-
-        img {
-            vertical-align: middle;
-            border-style: none;
-        }
-
-        /* About Me 
-    ---------------------*/
-        .about-text h3 {
-            font-size: 45px;
-            font-weight: 700;
-            margin: 0 0 6px;
-        }
-
-        @media (max-width: 767px) {
-            .about-text h3 {
-                font-size: 35px;
-            }
-        }
-
-        .about-text h6 {
-            font-weight: 600;
-            margin-bottom: 15px;
-        }
-
-        @media (max-width: 767px) {
-            .about-text h6 {
-                font-size: 18px;
-            }
-        }
-
-        .about-text p {
-            font-size: 18px;
-            max-width: 450px;
-        }
-
-        .about-text p mark {
-            font-weight: 600;
-            color: #20247b;
-        }
-
-        .about-list {
-            padding-top: 10px;
-        }
-
-        .about-list .media {
-            padding: 5px 0;
-        }
-
-        .about-list label {
-            color: #20247b;
-            font-weight: 600;
-            width: 88px;
-            margin: 0;
-            position: relative;
-        }
-
-        .about-list label:after {
-            content: "";
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            right: 11px;
-            width: 1px;
-            height: 12px;
-            background: #20247b;
-            -moz-transform: rotate(15deg);
-            -o-transform: rotate(15deg);
-            -ms-transform: rotate(15deg);
-            -webkit-transform: rotate(15deg);
-            transform: rotate(15deg);
-            margin: auto;
-            opacity: 0.5;
-        }
-
-        .about-list p {
-            margin: 0;
-            font-size: 15px;
-        }
-
-        @media (max-width: 991px) {
-            .about-avatar {
-                margin-top: 30px;
-            }
-        }
-
-        .about-section .counter {
-            padding: 22px 20px;
-            background: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
-        }
-
-        .about-section .counter .count-data {
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
-
-        .about-section .counter .count {
-            font-weight: 700;
-            color: #20247b;
-            margin: 0 0 5px;
-        }
-
-        .about-section .counter p {
-            font-weight: 600;
-            margin: 0;
-        }
-
-        mark {
-            background-image: linear-gradient(rgba(252, 83, 86, 0.6), rgba(252, 83, 86, 0.6));
-            background-size: 100% 3px;
-            background-repeat: no-repeat;
-            background-position: 0 bottom;
-            background-color: transparent;
-            padding: 0;
-            color: currentColor;
-        }
-
-        .theme-color {
-            color: #fc5356;
-        }
-
-        .dark-color {
-            color: #20247b;
-        }
-    </style>
+    {% if title %}
+    <title>Event Management - {{title}} </title>
+    {% else %}
+    <title>Event Management </title>
+    {% endif %}
 </head>
 
 <body>
-    {{obj.first_name}} {{obj.last_name}}
-    {{obj.profile.about}}
-    {{obj.email}}
-    {{obj.profile.image.url}}
-    <section class="section about-section gray-bg" id="about">
-        <div class="container">
-            <div class="row align-items-center flex-row-reverse">
-                <div class="col-lg-6">
-                    <div class="about-text go-to">
-                        <h3 class="dark-color">About Me</h3>
-                        <h6 class="theme-color lead">A Lead UX &amp; UI designer based in Canada</h6>
-                        <p>I <mark>design and develop</mark> services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores. My passion is to design digital user experiences through the bold interface and meaningful interactions.</p>
-                        <div class="row about-list">
-                            <div class="col-md-6">
-                                <div class="media">
-                                    <label>Birthday</label>
-                                    <p>4th april 1998</p>
-                                </div>
-                                <div class="media">
-                                    <label>Age</label>
-                                    <p>22 Yr</p>
-                                </div>
-                                <div class="media">
-                                    <label>Residence</label>
-                                    <p>Canada</p>
-                                </div>
-                                <div class="media">
-                                    <label>Address</label>
-                                    <p>California, USA</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="media">
-                                    <label>E-mail</label>
-                                    <p>info@domain.com</p>
-                                </div>
-                                <div class="media">
-                                    <label>Phone</label>
-                                    <p>820-885-3321</p>
-                                </div>
-                                <div class="media">
-                                    <label>Skype</label>
-                                    <p>skype.0404</p>
-                                </div>
-                                <div class="media">
-                                    <label>Freelance</label>
-                                    <p>Available</p>
-                                </div>
-                            </div>
-                        </div>
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <div class="container">
+                <a class="navbar-brand mr-4" href="{% url 'event-home' %}">Event Management</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+                    aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <div class="navbar-nav mr-auto">
+                        <a class="nav-item nav-link" href="{% url 'event-home' %}">Home</a>
+                        {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                        {% endif %}
+                        <a class="nav-item nav-link" href="{% url 'event-about' %}">About</a>
+
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-avatar">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" title="" alt="">
+                    <!-- Navbar Right Side -->
+                    <div class="navbar-nav">
+
+                        <div class="input-group">
+                            <form action="/" method="get">
+                                <div class="form-outline" style="display: inline-flex;">
+                                    <input type="search" name="query" id="query" placeholder="Search Event"
+                                        class="form-control" />&nbsp;&nbsp;&nbsp;
+                                    <input type="submit" class="btn btn-success" value="Search">
+                                </div>
+                            </form>
+                        </div>
+                        &nbsp;&nbsp;&nbsp;
+
+                        {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                        {% else %}
+                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                        <a class="nav-item nav-link" href="{% url 'users-register' %}">Register</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-            <div class="counter">
-                <div class="row">
-                    <div class="col-6 col-lg-3">
-                        <div class="count-data text-center">
-                            <h6 class="count h2" data-to="500" data-speed="500">500</h6>
-                            <p class="m-0px font-w-600">Happy Clients</p>
+        </nav>
+    </header>
+    <br>
+    <br>
+    <main role="main" class="container">
+        <div class="row">
+            <div class="col-md-8">
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{message.tags}}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+                {% endif %}
+
+            </div>
+            <div class="col-md-10">
+                <div class="content-section">
+                    <br><br><br>
+                    <section class="mb-5">
+                        <div class="row">
+                            <div class="col-md-7 mb-4 mb-md-0">
+                                <div class="mdb-lightbox">
+                                    <div class="row product-gallery mx-1">
+                                        <div class="col-12 mb-0">
+                                            <figure class="view overlay rounded z-depth-1 main-img">
+                                                <a href="{{obj.profile.idcard.url}}" data-size="710x823">
+                                                    <img src="{{obj.profile.idcard.url}}" class="img-fluid z-depth-1">
+                                                </a>
+                                            </figure>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <h5>Username : {{obj.username}} </h5>
+                                <p class="mb-2 text-muted small">{{obj.email}}</p>
+                                <p><span class="mr-1"><strong>About :</strong></span></p>
+                                <p class="pt-0">{{obj.profile.about}}</p>
+                                <div class="table-responsive">
+                                    <table class="table table-md table-borderless mb-0">
+                                        <tbody>
+                                            <tr>
+                                                <th class="pl-0 w-25" scope="row"><strong>CollegeID</strong></th>
+                                                <td>{{obj.profile.idnumber}}</td>
+                                            </tr>
+                                            {%ifequal obj.profile.usertype "Organizer" %}
+                                            <tr>
+                                                <th class="pl-0 w-25" scope="row"><strong>Evnets Post</strong></th>
+                                                <td>{{total}}</td>
+                                            </tr>
+                                            {%else%}
+                                            <tr>
+                                                <th class="pl-0 w-25" scope="row"><strong>Attened Event</strong></th>
+                                                <td>{{count}}</td>
+                                            </tr>
+                                            {%endifequal%}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 col-lg-3">
-                        <div class="count-data text-center">
-                            <h6 class="count h2" data-to="150" data-speed="150">150</h6>
-                            <p class="m-0px font-w-600">Project Completed</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3">
-                        <div class="count-data text-center">
-                            <h6 class="count h2" data-to="850" data-speed="850">850</h6>
-                            <p class="m-0px font-w-600">Photo Capture</p>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3">
-                        <div class="count-data text-center">
-                            <h6 class="count h2" data-to="190" data-speed="190">190</h6>
-                            <p class="m-0px font-w-600">Telephonic Talk</p>
-                        </div>
-                    </div>
+                    </section>
                 </div>
             </div>
         </div>
-    </section>
+    </main>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
